# knowunity_agent

./: .env.example  .gitignore  README.md  out.json  pyproject.toml  results_mini_dev_20260117_024344.json  results_mini_dev_20260117_030021.json  results_mini_dev_20260117_030059.json
scripts/: README.md  evaluate.py  interact.py  mse.py  submit_predictions.py  test_and_submit.py  test_api.py  test_student.py  test_submission.py  test_tutor_orchestrator.py
src/: adaptive_tutor.py  agent.py  api.py  batch_evaluation.py  multi_agent_tutor.py  student_communicator.py  subject_categories.py
src/agents/: eval_agent.py  evaluation_agent.py  manager.py  question_agent.py  scoring_agent.py  tutor_agent.py
src/f_bdsm/: config.py  orchestrator.py  student.py
src/fbdsm/: __init__.py  api.py  config.py  early_stopping.py  evaluation.py  models.py  orchestrator.py  student.py
src/fbdsm/agents/: __init__.py  base.py  difficulty_advisor.py  level_inferrer.py  message_composer.py  question_agent.py  question_strategy.py  response_analyzer.py  scoring_agent.py  tutor_agent.py
