[project]
name = "f_bdsm"
version = "0.1.0"
readme = "README.md"
description = "f_bdsm"
requires-python = "~=3.12"
dependencies = [
    "dspy>=3.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
