[project]
name = "fbdsm"
version = "0.1.0"
readme = "README.md"
description = "fbdsm"
requires-python = "~=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "fire>=0.7.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tqdm>=4.67.1",
    "typer>=0.21.1",
]

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = ["I", "E", "F", "W", "C90"]
lint.ignore = []

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
